--- a/apps/demo_ponglt/proj_ccsv5/ponglt/.settings/org.eclipse.core.resources.prefs
+++ b/apps/demo_ponglt/proj_ccsv5/ponglt/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,23 @@
 eclipse.preferences.version=1
+encoding//_Debug_Chronos/app_code/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/app_code/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/applets/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/applets/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/makefile=UTF-8
+encoding//_Debug_Chronos/objects.mk=UTF-8
+encoding//_Debug_Chronos/otkernel/gulp/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/otkernel/gulp/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/otlib/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/otlib/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/otplatform/cc430/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/otplatform/cc430/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/otplatform/cc430_lib/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/otplatform/cc430_lib/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/otradio/cc430/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/otradio/cc430/subdir_vars.mk=UTF-8
+encoding//_Debug_Chronos/sources.mk=UTF-8
+encoding//_Debug_Chronos/subdir_rules.mk=UTF-8
+encoding//_Debug_Chronos/subdir_vars.mk=UTF-8
 encoding//_Debug_EM430RF/app_code/subdir_rules.mk=UTF-8
 encoding//_Debug_EM430RF/app_code/subdir_vars.mk=UTF-8
 encoding//_Debug_EM430RF/applets/subdir_rules.mk=UTF-8
