Update to GCC 4.9.x

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 ###################################
 # Compiler/Linker Generated Files #
 ###################################
+*.gcccmd
 *.o
 *.d
 *.so
@@ -14,7 +15,7 @@
 *.map
 *.depend
 *.lst
-*.elf
+*.elf*
 *.hdo*
 
 ######################
