--- a/apps/demo_ponglt/proj_ac6/.cproject
+++ b/apps/demo_ponglt/proj_ac6/.cproject
@@ -199,7 +199,7 @@
 									<listOptionValue builtIn="false" value="BOARD_Nucleo_LRWAN1"/>
 									<listOptionValue builtIn="false" value="__GCC__"/>
 									<listOptionValue builtIn="false" value="__DEBUG__"/>
-									<listOptionValue builtIn="false" value="__NOEEPROM__"/>
+									<listOptionValue builtIn="false" value="__VLSRAM__"/>
 								</option>
 								<option id="gnu.c.compiler.option.dialect.std.71524909" name="Language standard" superClass="gnu.c.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.c.compiler.dialect.default" valueType="enumerated"/>
 								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.57976497" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c"/>
