--- a/apps/demo_xrttest/stm32cube/.gitignore
+++ b/apps/demo_xrttest/stm32cube/.gitignore
@@ -1,6 +1,5 @@
-/Debug/
-/Debug_Nucleo_LRWAN1/
-/Debug_NucleoLRWAN1/
-/Debug_DiscoveryLoRa/
-/Proto_DiscoveryLoRa/
-/Debug_HTLoRa_R1/
+# Build Directory Gitignore
+
+/Debug*
+/Proto*
+/Release*
